--- a/src/app/orders/order/order.component.html
+++ b/src/app/orders/order/order.component.html
@@ -1,1 +1,78 @@
-<p>order works!</p>
+<form #form="ngForm" autocomplete="off"  (submit)="onSubmit(form)">
+    <input type="hidden"  name="OrderId" #OrderId="ngModel" [(ngModel)]="service.formData.OrderId">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label>Order No.</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text">#</div>
+            </div>
+            <input name="OrderNo" #OrderNo="ngModel" [(ngModel)]="service.formData.OrderNo" class="form-control" readonly>
+          </div>
+        </div>
+        <div class="form-group">
+          <label>Customer</label>
+          <select name="CustomerId" #CustomerId="ngModel" [(ngModel)]="service.formData.CustomerId" class="form-control"
+          [class.is-invalid]="!isValid && service.formData.CustomerId">
+            <option value="0">-Select-</option>
+            <option *ngFor="let item of customerList" value="{{item.CustomerId}}">{{item.Name}}</option>
+          </select>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label>Payment Method</label>
+          <select name="Pmethod" #Pmethod="ngModel" [(ngModel)]="service.formData.Pmethod" class="form-control">
+            <option value="">-Select-</option>
+            <option value="Cash">Cash</option>
+            <option value="Card">Card</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Grand Total</label>
+  
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text">$</div>
+            </div>
+            <input name="Gtotal" #Gtotal="ngModel" [(ngModel)]="service.formData.Gtotal" class="form-control" readonly>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- order items table-->
+    <!-- <table class="table table-borderless">
+      <thead class="thead-light">
+        <th>Food</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Total</th>
+        <th>
+          <a class="btn btn-sm btn-success text-white" (click)="AddOrEditOrderItem(null,service.formData.OrderId)"><i class="fa fa-plus"></i> Add Item</a>
+        </th>
+      </thead>
+      <tbody>
+        <tr *ngIf="service.orderItems.length==0" [class.text-danger]="!isValid && service.orderItems.length==0">
+          <td class="font-italic text-center" colspan="5">
+            No food item selected for this order.
+          </td>
+        </tr>
+  
+        <tr *ngFor="let item of service.orderItems;let i=index;">
+          <td>{{item.ItemName}}</td>
+          <td>{{item.Price}}</td>
+          <td>{{item.Quantity}}</td>
+          <td>{{item.Total}}</td>
+          <td>
+            <a class="btn btn-sm btn-info text-white" (click)="AddOrEditOrderItem(i,service.formData.OrderId)"><i class="fa fa-pencil"></i></a>
+            <a class="btn btn-sm btn-danger text-white ml-1" (click)="onDeleteOrderItem(item.OrderItemID,i)"><i class="fa fa-trash"></i></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>-->
+    <div class="form-group">
+      <button type="submit" class="btn btn-dark"><i class="fa fa-database"></i> Submit</button>
+      <a class="btn btn-outline-dark ml-1" routerLink="/orders"><i class="fa fa-table"></i> View Orders</a>
+    </div> 
+  </form>
